# dui

./: .gitignore  Cargo.toml  LICENSE  M4_BACKUP_INFO.md  README.md  pawan.toml  tailwind.config.js
.github/workflows/: publish.yml
css/: dirmacs-ui.css  dui.css
src/: accordion.rs  alert_banner.rs  avatar.rs  badge.rs  breadcrumb.rs  button.rs  card.rs  chat_input.rs  chat_message.rs  checkbox.rs  chip_select.rs  command.rs  divider.rs  dropdown.rs  empty_state.rs  feature_grid.rs  file_upload.rs  footer.rs  hero.rs  input.rs  kbd.rs  lib.rs  modal.rs  navbar.rs  progress_bar.rs  public_layout.rs  radio.rs  score_ring.rs  scroll_reveal.rs  select.rs  sheet.rs  sidebar.rs  skeleton.rs  stats_card.rs  status_badge.rs  stepper.rs  switch.rs  table.rs  tabs.rs  textarea.rs  (+2 more)
src/ai_view/: mod.rs  renderer.rs  schema.rs
src/auth/: guard.rs  login.rs  mod.rs  state.rs
