[package]
name = "dui-leptos"
version = "0.3.0"
edition = "2021"
description = "DUI — A production-ready Leptos 0.7 component library. 29 accessible, signal-driven components with a dark-first design system."
license = "MIT"
authors = ["Dirmacs <dev@dirmacs.com>"]
repository = "https://github.com/dirmacs/dui"
homepage = "https://github.com/dirmacs/dui"
keywords = ["leptos", "components", "ui", "wasm", "frontend"]
categories = ["gui", "wasm", "web-programming"]
readme = "README.md"
rust-version = "1.75"

[workspace]

[lib]
name = "dui"
crate-type = ["rlib"]

[dependencies]
leptos = { version = "0.7", features = ["csr"] }

serde = { version = "1.0", features = ["derive"] }

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
	"console",
	"Window",
	"Document",
	"Element",
	"HtmlElement",
	"HtmlInputElement",
	"HtmlSelectElement",
	"Event",
	"FocusEvent",
	"KeyboardEvent",
	"MouseEvent",
	"DomTokenList",
	"CssStyleDeclaration",
	"DomRect",
	"HtmlCollection",
	"NodeList",
	"EventTarget",
	"FileList",
	"File",
	"DragEvent",
	"DataTransfer",
] }

gloo-timers = "0.3"
