[package]
name = "dui-leptos"
version = "0.5.0"
edition = "2021"
description = "DUI — A production-ready Leptos 0.8 component library. 36 accessible, signal-driven components with a dark-first design system. Includes public page components: Navbar, Footer, Hero, PublicLayout, FeatureGrid."
license = "MIT"
authors = ["Dirmacs <dev@dirmacs.com>"]
repository = "https://github.com/dirmacs/dui"
homepage = "https://github.com/dirmacs/dui"
keywords = ["leptos", "components", "ui", "wasm", "frontend"]
categories = ["gui", "wasm", "web-programming"]
readme = "README.md"
rust-version = "1.75"

[workspace]

[lib]
name = "dui"
crate-type = ["rlib"]

[dependencies]
leptos = { version = "0.8", features = ["csr"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
	"console",
	"Window",
	"Document",
	"Element",
	"HtmlElement",
	"HtmlInputElement",
	"HtmlSelectElement",
	"Event",
	"FocusEvent",
	"KeyboardEvent",
	"MouseEvent",
	"DomTokenList",
	"CssStyleDeclaration",
	"DomRect",
	"HtmlCollection",
	"NodeList",
	"EventTarget",
	"FileList",
	"File",
	"DragEvent",
	"DataTransfer",
	"Storage",
	"Location",
	"IntersectionObserver",
	"IntersectionObserverInit",
	"IntersectionObserverEntry",
	"MediaQueryList",
] }

gloo-timers = "0.3"
gloo-net = { version = "0.6", features = ["http"] }
gloo-storage = "0.3"
